--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ body .cart .cart-header-cards .cart-cards {
 body .cart .cart-header-cards .cart-cards .cart-card {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
 }
 body .cart .cart-header-cards .cart-cards .cart-card .cart-img-add-btn {
   position: relative;
@@ -43,6 +44,10 @@ body .cart .cart-header-cards .cart-cards .cart-card .cart-img-add-btn .cart--bu
   position: absolute;
   bottom: -15px;
   right: 45%;
+}
+body .cart .cart-header-cards .cart-cards .cart-card .cart-card-texts {
+  display: flex;
+  flex-direction: column;
 }
 body .cart .cart-order {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
