--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -4,20 +4,75 @@
   padding: 0;
 }
 
-//Breakpoints ---------------------
-$mobile: 375px;
-$tablets: 768px;
-$laptop: 1024px;
-$desktop: 1440px;
+//Responsiveness ---------------------
+$xxl: 1536px;
+$xl: 1280px;
+$lg: 1024px;
+$md: 768px;
+$sm: 640px;
+$xs: 475px;
+
+.container {
+  max-width: $xxl;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+/* 2xl */
+@media (max-width: $xxl) {
+  .container {
+    max-width: $xl;
+  }
+}
+
+/* xl */
+@media (max-width: $xl) {
+  .container {
+    max-width: $lg;
+  }
+}
+
+/* lg */
+@media (max-width: $lg) {
+  .container {
+    max-width: $md;
+  }
+}
+
+/* md */
+@media (max-width: $md) {
+  .container {
+    max-width: $sm;
+  }
+}
+
+/* sm */
+@media (max-width: $sm) {
+  .container {
+    max-width: $xs;
+  }
+}
+
+/* xs */
+@media (max-width: $xs) {
+  .container {
+    width: 100%;
+  }
+}
 
 //Colors -------------------------
 $primary: #e7816b;
 $primary_variant: #ffad9b;
-$secondary: #1d1c1e;
+$secondary: white;
 $secondary_variant: #333136;
-$background: #ffffff;
-$error: #f1f3f5;
+$background: #faf8f6;
 $activeButton: #66d2cf;
+
+$cream: #ffecbb;
+$grey: rgb(245, 238, 238);
+$orange: #e56e11;
 
 @media print {
   body {
@@ -26,7 +81,7 @@ $activeButton: #66d2cf;
 }
 
 body {
-  background-color: $background;
+  background-color: $secondary;
 }
 
 //Fonts -------------------------
@@ -52,72 +107,26 @@ $font: "Jost", sans-serif;
   color: $color;
 }
 
-@mixin h1_text {
-  @include fonts($size: 48px, $line_height: 48px, $color: $secondary_variant);
+h1 {
+  @include fonts(
+    $size: 48px,
+    $line_height: 48px,
+    $color: $secondary_variant,
+    $weight: 900
+  );
 }
 
-@mixin h2_text {
+h2 {
   @include fonts($size: 40px, $line_height: 48px, $color: $secondary_variant);
 }
 
-@mixin h3_text {
+h3 {
   @include fonts(
     $size: 20px,
     $line_height: 26px,
     $letter_spacing: +5,
     $color: $secondary_variant
   );
-}
-
-@mixin body_text {
-  @include fonts(
-    $size: 16px,
-    $weight: 400,
-    $line_height: 26px,
-    $color: $secondary_variant
-  );
-}
-
-//Borders -------------------------------------------
-@mixin border($rad: 5px, $size: 2px, $bord: solid) {
-  border-radius: $rad;
-  border-width: $size;
-  border-style: $bord;
-}
-
-//Buttons -------------------------------------------
-@mixin button($bg_color, $text_color) {
-  background-color: $bg_color;
-  color: $text_color;
-
-  @include border();
-
-  button:hover {
-    background-color: $secondary_variant;
-    color: $secondary;
-  }
-}
-
-//Flex, Positionining & Sizing ----------------------
-@mixin flex($direction: column, $gap: 0%, $align: center, $justify: center) {
-  display: flex;
-  flex: {
-    direction: $direction;
-    wrap: wrap;
-  }
-  gap: $gap;
-  align-items: $align;
-  justify-content: $justify;
-}
-
-@mixin absolute($position: absolute, $top: 0px) {
-  position: $position;
-  top: $top;
-}
-
-@mixin max-res($width: 100%, $height: 100%) {
-  width: $width;
-  height: $height;
 }
 
 //Test ---------------------------------
