--- a/index.scss
+++ b/index.scss
@@ -1,13 +1,13 @@
 @import "./styles/themes";
 
 body {
-  padding: 100px 150px;
   display: flex;
   justify-content: center;
 
   .cart {
-    padding: 100px;
-    width: fit-content;
+    @extend .container;
+    padding: 3rem 5rem;
+
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
     display: flex;
@@ -17,24 +17,40 @@ body {
     background-color: $background;
 
     .cart-header-cards {
+      @extend .container;
+      // min-width: 80%;
+
       display: flex;
       flex-direction: column;
       gap: 30px;
 
-      h1 {
-      }
-
       .cart-cards {
+        @extend .container;
+
         display: grid;
         grid-template-columns: auto auto auto;
         gap: 30px;
 
+        @media (max-width: $xl) {
+          grid-template-columns: auto auto;
+          gap: 20px;
+        }
+
+        @media (max-width: $md) {
+          grid-template-columns: auto;
+          gap: 20px;
+        }
+
         .cart-card {
+          // @extend .container;
+
           display: flex;
           flex-direction: column;
           // justify-content: space-around;
 
           .cart-img-add-btn {
+            @extend .container;
+
             margin-bottom: 15px;
 
             position: relative;
@@ -86,6 +102,7 @@ body {
     }
 
     .cart-order {
+      @extend .container;
       padding: 25px;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.19);
