--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -16,44 +16,40 @@ $xs: 475px;
   max-width: $xxl;
   margin-left: auto;
   margin-right: auto;
+  // padding-left: 2.5rem;
+  // padding-right: 2.5rem;
 }
 
-/* 2xl */
 @media (max-width: $xxl) {
   .container {
     max-width: $xl;
   }
 }
 
-/* xl */
 @media (max-width: $xl) {
   .container {
     max-width: $lg;
   }
 }
 
-/* lg */
 @media (max-width: $lg) {
   .container {
     max-width: $md;
   }
 }
 
-/* md */
 @media (max-width: $md) {
   .container {
     max-width: $sm;
   }
 }
 
-/* sm */
 @media (max-width: $sm) {
   .container {
     max-width: $xs;
   }
 }
 
-/* xs */
 @media (max-width: $xs) {
   .container {
     width: 100%;
@@ -79,6 +75,9 @@ $orange: #e56e11;
 }
 
 body {
+  display: flex;
+  justify-content: center;
+
   background-color: $secondary;
 }
 
@@ -112,6 +111,10 @@ h1 {
     $color: $secondary_variant,
     $weight: 900
   );
+
+  @media (max-width: $xxl) {
+    font-size: 28px;
+  }
 }
 
 h2 {
@@ -128,9 +131,6 @@ h3 {
 }
 
 //Test ---------------------------------
-@mixin test($tcol: black) {
-  background-color: $tcol;
-  opacity: 0.5;
-  @include border();
-  border-color: red;
-}
+// div {
+//   border: 1px dotted red;
+// }
