--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@
   max-width: 1536px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 @media (max-width: 1536px) {
@@ -83,6 +85,10 @@ h3 {
   letter-spacing: 5;
   line-height: 26px;
   color: #333136;
+}
+
+div {
+  border: 1px dotted red;
 }
 
 .cart {
