--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -16,8 +16,8 @@ $xs: 475px;
   max-width: $xxl;
   margin-left: auto;
   margin-right: auto;
-  // padding-left: 2.5rem;
-  // padding-right: 2.5rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 @media (max-width: $xxl) {
@@ -131,6 +131,6 @@ h3 {
 }
 
 //Test ---------------------------------
-// div {
-//   border: 1px dotted red;
-// }
+div {
+  border: 1px dotted red;
+}
